# ponto-eletronico

./: .coveragerc  =2.2.0  =2.3.0  README.md  pyproject.toml  pytest.ini
ponto/: app.py  constantes.py  main.py  model.py  utilitarios.py  view.py
ponto/model/: colaborador.py  utilitarios.py
ponto/view/: constantes.py  entrada.py  tela.py  tela_cadastros.py  tela_colaboradores.py  tela_principal.py  tela_registros.py
scripts/: db_create.sql
tests/: test_colaborador.py  test_entrada.py  test_utilitarios.py
